--- a/src/containers/Auth/Auth.module.css
+++ b/src/containers/Auth/Auth.module.css
@@ -9,7 +9,9 @@
     padding:10px;
     box-sizing: border-box;
 }
-
+.errorMsg{
+    color: rgb(247, 147, 147);
+}
 
 @media (min-width: 600px) {
     .Auth {
